# ra2-replica

./: .gitignore  CMakeLists.txt  vcpkg.json
assets/: README.md
assets/buildings/allied/gapowr/: gapowr_b.shp
assets/buildings/allied/gawall/: gawall.shp
assets/buildings/soviet/nacnst/: nacnst.shp  nacnst_a.shp  nacnst_b.shp  nacnst_c.shp
assets/buildings/soviet/nadept/: nadept.shp  nadept_c.shp  nadeptbb.shp
assets/buildings/soviet/nahand/: nahand.shp
assets/buildings/soviet/nairon/: nairon.shp  nairon_a.shp  nairon_f.shp  nairon_h.shp
assets/buildings/soviet/nanrct/: nanrct.shp  nanrct_a.shp
assets/buildings/soviet/napowr/: napowr.shp  napowr_a.shp
assets/buildings/soviet/naradr/: naradr.shp  naradr_a.shp
assets/buildings/soviet/narefn/: narefn.shp  narefnbb.shp  narefnl1.shp  narefnl2.shp  narefnl3.shp  narefnl4.shp  narefnor.shp
assets/buildings/soviet/natech/: natech.shp
assets/buildings/soviet/nawall/: nawall.shp
assets/buildings/soviet/naweap/: naweap.shp  naweap_1.shp  naweap_2.shp  naweap_3.shp  naweap_4.shp  naweap_a.shp  naweapbb.shp
assets/ui/sidebar/sidec02/: lspacer.shp
docs/: code-structure.md  current-demo-architecture.md  tank-shadow-rendering-design.md  voxel-rhino-demo.md  vxl-rendering-design.md
experiment/vxl-render/: README.md
experiment/vxl-render/src/: main.cpp
src/: app_main_ui.cpp  art_ini.cpp  art_ini.h  building_system.h  building_system_runtime.cpp  demo_app_support.cpp  demo_app_support.h  demo_scene.cpp  demo_scene.h  demo_style.h  gl_loader.cpp  gl_loader.h  imgui_debug_panel.cpp  imgui_debug_panel.h  iso_grid_renderer.cpp  iso_grid_renderer.h  iso_world.cpp  iso_world.h  map_grid.cpp  map_grid.h  palette.cpp  palette.h  renderer2d.cpp  renderer2d.h  rhino_render_state.cpp  rhino_render_state.h  rhino_unit.cpp  rhino_unit.h  rules_colors.cpp  rules_colors.h  shp_ts.cpp  shp_ts.h  sidebar.cpp  sidebar.h  tmp_tile.cpp  tmp_tile.h  ui_texture.h  voxel_normals.h  voxel_unit.cpp  voxel_unit.h  (+8 more)
